can operate on negative numbers. fixed cases where strange chains of characters can be typed in. (+2 squashed commit)
Squashed commit:

[c72c974] fixed operating on a negative

[61bfb30] working on operating on a negative number (not working yet)

--- a/JS Calculator/style.css
+++ b/JS Calculator/style.css
@@ -18,4 +18,7 @@ button{
   width:50px;
 }
 
-
+.calc-btn-lg {
+	display:inline-block;
+	width:104px;
+}
